fixed the navbar collapse flickering, added box shadow on navbar as well

--- a/css/index.css
+++ b/css/index.css
@@ -60,12 +60,10 @@ a {
   box-shadow: 0 0 0 0.25rem #183b56;
 }
 
-.navbar-collapse {
-  padding-bottom: 1.005rem;
-}
-
 .active {
   background-color: #183b56;
+  -webkit-box-shadow: 0 0 0.8rem #183b56;
+  box-shadow: 0 0 0.8rem #183b56;
 }
 
 /* BUTTONS */
@@ -614,10 +612,6 @@ small {
 @media (min-width: 992px) {
   .container, .container-lg, .container-md, .container-sm {
     max-width: 960px;
-  }
-
-  .navbar-collapse {
-    padding-bottom: 0;
   }
 
   .navbar-expand-lg .navbar-nav .nav-link {
