--- a/lp/_responsive.scss
+++ b/lp/_responsive.scss
@@ -182,10 +182,6 @@
     max-width: 960px;
   }
 
-  .navbar-collapse {
-    padding-bottom: 0;
-  }
-
   .navbar-expand-lg {
     .navbar-nav {
       .nav-link {
