--- a/lp/components/_navbar.scss
+++ b/lp/components/_navbar.scss
@@ -34,10 +34,7 @@
   }
 }
 
-.navbar-collapse {
-  padding-bottom: $base-padding * 1.34;
-}
-
 .active {
   background-color: $secondary;
+  box-shadow: 0 0 .8rem $secondary;
 }
